[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "binreader"
version = "0.0.1"
description = "Lightweight binary file reader with CLI and typed record parsers"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Your Name" }]
dependencies = [
  "numpy>=1.26",
  "scipy>=1.12",
  "pandas>=2.2",
  "typer>=0.12",
  "rich>=13.7",
  "matplotlib>=3.9"
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "mypy>=1.10",
  "ruff>=0.5"
]

[project.scripts]
binreader = "binreader.cli:app"

[tool.ruff]
line-length = 100

[tool.mypy]
python_version = "3.11"
disallow_untyped_defs = true
warn_unused_ignores = true
